--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Фитнес-центр "Sila"</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <title>Фитнес-центр “Sila”</title>
 </head>
 
 <body>
@@ -19,24 +20,76 @@
             </ul>
             <a href="tel:+78313392626" class="topbar__contacts link">+7 (8313) 39 26 26</a>
         </nav>
-        <div class="header-content header header-content--content">
-            <h1 class="header-content__hading">Фитнес-центр "Sila"</h1>
+        <div class="header-content header-content--content">
+            <h1 class="header-content__hading">Фитнес-центр “Sila”</h1>
             <p class="header-content__title">Переключите внимание с того, как выглядит ваше тело, на то что оно может
                 делать.</p>
             <a href="#application" class="header-content__link link">Отправить заявку</a>
         </div>
     </header>
-    <main class="main">
-        <section></section>
+    <!-- <main class="main">
+        <section class="location">
+            <h1 class="location__heading"></h1>
+            <img src="./assets/images/location.jpg" alt="Здание" class="location__image">
+        </section>
         <section class="programs section" id="programs">
             <h1 class="programs__heading heading">Программы и услуги</h1>
             <main class="programs-main programs__main ">
-                <article class="programs-main__item"></article>
-                <article class="programs-main__item"></article>
-                <article class="programs-main__item"></article>
-                <article class="programs-main__item"></article>
-                <article class="programs-main__item"></article>
-                <article class="programs-main__item"></article>
+                <article class="programs-main__item">
+                    <img class="background" src="./assets/images/programs/joga.jpg" alt="Йога">
+                    <div class="information">
+                        <h4 class="information__name">Йога</h4>
+                        <p class="information__discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Nulla hic commodi repudiandae officiis dolor ex, incidunt perferendis voluptates ab iste
+                            optio accusamus quaerat nam sed nihil id quasi! Reprehenderit, quidem?</p>
+                    </div>
+                </article>
+
+                <article class="programs-main__item">
+                    <img class="background" src="./assets/images/programs/joga.jpg" alt="Йога">
+                    <div class="information">
+                        <h4 class="information__name">Йога</h4>
+                        <p class="information__discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Nulla hic commodi repudiandae officiis dolor ex, incidunt perferendis voluptates ab iste
+                            optio accusamus quaerat nam sed nihil id quasi! Reprehenderit, quidem?</p>
+                    </div>
+                </article>
+                <article class="programs-main__item">
+                    <img class="background" src="./assets/images/programs/joga.jpg" alt="Йога">
+                    <div class="information">
+                        <h4 class="information__name">Йога</h4>
+                        <p class="information__discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Nulla hic commodi repudiandae officiis dolor ex, incidunt perferendis voluptates ab iste
+                            optio accusamus quaerat nam sed nihil id quasi! Reprehenderit, quidem?</p>
+                    </div>
+                </article>
+                <article class="programs-main__item">
+                    <img class="background" src="./assets/images/programs/joga.jpg" alt="Йога">
+                    <div class="information">
+                        <h4 class="information__name">Йога</h4>
+                        <p class="information__discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Nulla hic commodi repudiandae officiis dolor ex, incidunt perferendis voluptates ab iste
+                            optio accusamus quaerat nam sed nihil id quasi! Reprehenderit, quidem?</p>
+                    </div>
+                </article>
+                <article class="programs-main__item">
+                    <img class="background" src="./assets/images/programs/joga.jpg" alt="Йога">
+                    <div class="information">
+                        <h4 class="information__name">Йога</h4>
+                        <p class="information__discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Nulla hic commodi repudiandae officiis dolor ex, incidunt perferendis voluptates ab iste
+                            optio accusamus quaerat nam sed nihil id quasi! Reprehenderit, quidem?</p>
+                    </div>
+                </article>
+                <article class="programs-main__item">
+                    <img class="background" src="./assets/images/programs/joga.jpg" alt="Йога">
+                    <div class="information">
+                        <h4 class="information__name">Йога</h4>
+                        <p class="information__discription">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Nulla hic commodi repudiandae officiis dolor ex, incidunt perferendis voluptates ab iste
+                            optio accusamus quaerat nam sed nihil id quasi! Reprehenderit, quidem?</p>
+                    </div>
+                </article>
             </main>
         </section>
 
@@ -91,10 +144,12 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__mail"><a href="mail:fitnes@Sila.ru" class="footer footer--mail-link">fitnes@Sila.ru</a></div>
+        <div class="footer__mail"><a href="mail:fitnes@Sila.ru" class="footer footer--mail-link">fitnes@Sila.ru</a>
+        </div>
         <div class="footer__copyright">Все права защищены &copy;</div>
-        <div class="footer__social"><a href="" class="footer__social-link"></a><a href="" class="footer__social-link"></a></div>
-    </footer>
+        <div class="footer__social"><a href="" class="footer__social-link"></a><a href=""
+                class="footer__social-link"></a></div>
+    </footer> -->
 </body>
 
 </html>
