--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
             </ul>
             <a href="tel:+78313392626" class="topbar__contacts link">+7 (8313) 39 26 26</a>
         </nav>
-        <div class="header-content header-content--content">
+        <div class="header-content header__content">
             <h1 class="header-content__hading">Фитнес-центр “Sila”</h1>
-            <p class="header-content__title">Переключите внимание с того, как выглядит ваше тело, на то что оно может
+            <p class="header-content__title">Переключите внимание с того, как выглядит ваше<br /> тело, на то что оно
+                может
                 делать.</p>
             <a href="#application" class="header-content__link link">Отправить заявку</a>
         </div>
     </header>
-    <!-- <main class="main">
+    <main class="main">
         <section class="location">
-            <h1 class="location__heading"></h1>
-            <img src="./assets/images/location.jpg" alt="Здание" class="location__image">
+            <h1 class="location__heading ">Лучший фитнес-центр Нижегородской области</h1>
+            <h3 class="location__subtitle">10 минут от города Дзержинск</h3>
         </section>
         <section class="programs section" id="programs">
             <h1 class="programs__heading heading">Программы и услуги</h1>
@@ -94,16 +95,17 @@
         </section>
 
         <section class="info" id="info">
-            <h1 class="info__heading">О нас</h1>
+            <!-- <h1 class="info__heading heading">О нас</h1>
             <section class="advantages info__advantages" id="advantages">
                 <h2 class="advantages__heading info__subtitle">Наши приемущества</h2>
+                <article class="advantages__item">
+                    <p></p>
+                </article>
                 <article class="advantages__item"></article>
                 <article class="advantages__item"></article>
                 <article class="advantages__item"></article>
-                <article class="advantages__item"></article>
-                <article class="advantages__item"></article>
-            </section>
-            <section class="instructors info__instructors">
+            </section> -->
+            <!-- <section class="instructors info__instructors">
                 <h2 class="instructors__heading info__subtitle">Для вас работает команда проффесионалов</h2>
                 <main class="instructors-main instructors__main">
                     <article class="instructors-main__item"></article>
@@ -113,9 +115,9 @@
                     <article class="instructors-main__item"></article>
                     <article class="instructors-main__item"></article>
                 </main>
-            </section>
+            </section> -->
         </section>
-        <section class="application" id="application">
+        <!-- <section class="application" id="application">
             <h1 class="application__heading">Записаться на тренеровку или купить абонемент</h1>
             <form action="" class="application__form aplication-form">
                 <input type="text" name="name" placeholder="Представьтесь">
@@ -131,9 +133,9 @@
                 </select>
                 <button type="submit">Отправить заявку</button>
             </form>
-        </section>
-        <section class="contacts" id="contacts">
-            <h1 class="contacts__heading headin">Контакты</h1>
+        </section> -->
+        <!-- <section class="contacts" id="contacts">
+            <h1 class="contacts__heading heading">Контакты</h1>
             <main class="contacts__main">
                 <div class="contacts-main">
                     <article class="contacts-main__map"></article>
@@ -141,9 +143,9 @@
                 </div>
             </main>
             <p class="__address"></p>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer__mail"><a href="mail:fitnes@Sila.ru" class="footer footer--mail-link">fitnes@Sila.ru</a>
         </div>
         <div class="footer__copyright">Все права защищены &copy;</div>
