get advanrages style

--- a/index.html
+++ b/index.html
@@ -95,16 +95,52 @@
         </section>
 
         <section class="info" id="info">
-            <!-- <h1 class="info__heading heading">О нас</h1>
+            <h1 class="info__heading heading">О нас</h1>
             <section class="advantages info__advantages" id="advantages">
                 <h2 class="advantages__heading info__subtitle">Наши приемущества</h2>
-                <article class="advantages__item">
-                    <p></p>
+                <article class="advantages__item first">
+                    <p>Уникальный озонированный бассейн
+                        с панорамным видом на реку.
+                        Оснащен гидромассажной зоной для
+                        спины и стоп, зонами отдыха с
+                        шезлонгами.</p>
                 </article>
-                <article class="advantages__item"></article>
-                <article class="advantages__item"></article>
-                <article class="advantages__item"></article>
-            </section> -->
+                <article class="advantages__item second">
+                    <div class="second__text">
+                        <h3>2 дорожки по 24 метра</h3>
+                        <p>Для спортивного плавания</p>
+                    </div>
+                    <div class="second__image">
+                        <img src="./assets/images/advantages/second.jpg" alt="">
+                    </div>
+                </article>
+                <article class="advantages__item third">
+                    <div class=" thrid__image">
+                        <h3>Банный спа-комплекс</h3>
+                        <p>Насладившись плаванием или
+                            водными активностями, Вы можете
+                            отдохнуть в нашей Spa-зоне, которая
+                            находится вблизи самого бассейна.</p>
+                    </div>
+                    <div class="thrid__description">
+                        <div class="thrid thrid--description-block">
+                            <p>Включает в себя финскую сауну, хаммам, инфрокрасную кабину, а также купель с холодной
+                                водой</p>
+                        </div>
+                        <div class="thrid thrid--description-block"><img src="./assets/images/advantages/third1.jpg"
+                                alt=""></div>
+                        <div class="thrid thrid--description-block"><img src="./assets/images/advantages/third2.jpg"
+                                alt=""></div>
+                    </div>
+                </article>
+                <article class="advantages__item fourth">
+                    <p>Оборудованный тренажерный зал с
+                        кардио-зоной, тренажерами для
+                        изолированной проработки мышц,
+                        зона работы со свободными весами и
+                        зона</p>
+                </article>
+            </section>
             <!-- <section class="instructors info__instructors">
                 <h2 class="instructors__heading info__subtitle">Для вас работает команда проффесионалов</h2>
                 <main class="instructors-main instructors__main">
