--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                 </article>
                 <article class="advantages__item third">
-                    <div class=" thrid__image">
+                    <div class="third__image">
                         <h3>Банный спа-комплекс</h3>
                         <p>Насладившись плаванием или
                             водными активностями, Вы можете
@@ -123,14 +123,14 @@
                             находится вблизи самого бассейна.</p>
                     </div>
                     <div class="thrid__description">
-                        <div class="thrid thrid--description-block">
+                        <div class="thrid__description-block">
                             <p>Включает в себя финскую сауну, хаммам, инфрокрасную кабину, а также купель с холодной
                                 водой</p>
                         </div>
-                        <div class="thrid thrid--description-block"><img src="./assets/images/advantages/third1.jpg"
-                                alt=""></div>
-                        <div class="thrid thrid--description-block"><img src="./assets/images/advantages/third2.jpg"
-                                alt=""></div>
+                        <div class="thrid__description-block"><img src="./assets/images/advantages/third1.jpg" alt="">
+                        </div>
+                        <div class="thrid__description-block"><img src="./assets/images/advantages/third2.jpg" alt="">
+                        </div>
                     </div>
                 </article>
                 <article class="advantages__item fourth">
