--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
         </section>
 
         <section class="info" id="info">
-            <h1 class="info__heading heading">О нас</h1>
             <section class="advantages info__advantages" id="advantages">
-                <h2 class="advantages__heading info__subtitle">Наши приемущества</h2>
                 <article class="advantages__item first">
                     <p>Уникальный озонированный бассейн
                         с панорамным видом на реку.
@@ -141,20 +139,44 @@
                         зона</p>
                 </article>
             </section>
-            <!-- <section class="instructors info__instructors">
+            <section class="instructors info__instructors">
                 <h2 class="instructors__heading info__subtitle">Для вас работает команда проффесионалов</h2>
                 <main class="instructors-main instructors__main">
-                    <article class="instructors-main__item"></article>
-                    <article class="instructors-main__item"></article>
-                    <article class="instructors-main__item"></article>
-                    <article class="instructors-main__item"></article>
-                    <article class="instructors-main__item"></article>
-                    <article class="instructors-main__item"></article>
+                    <article class="instructors-main__item">
+                        <div class="img"><img src="./assets/images/instructors/Sveta.jpg" alt=""></div>
+                        <h3>Дроздова Светлана</h3>
+                        <p>Инструктор водных программ</p>
+                    </article>
+                    <article class="instructors-main__item">
+                        <div class="img"><img src="./assets/images/instructors/Nataliya.jpg" alt=""></div>
+                        <h3>Заварзина Наталья</h3>
+                        <p>Инструктор групповых программ</p>
+                    </article>
+                    <article class="instructors-main__item">
+                        <div class="img"><img src="./assets/images/instructors/Kseniya.jpg" alt=""></div>
+                        <h3>Недобитко Ксения</h3>
+                        <p>Персональный тренер</p>
+                    </article>
+                    <article class="instructors-main__item">
+                        <div class="img"><img src="./assets/images/instructors/Alena.jpg" alt=""></div>
+                        <h3>Воробьева Алёна</h3>
+                        <p>Инструктор водных и групповых программ</p>
+                    </article>
+                    <article class="instructors-main__item">
+                        <div class="img"><img src="./assets/images/instructors/Ludmila.webp" alt=""></div>
+                        <h3>Гришина Людмила</h3>
+                        <p>Инструктор секции дзюдо и тренажерного зала</p>
+                    </article>
+                    <article class="instructors-main__item">
+                        <div class="img"><img src="./assets/images/instructors/Ivan.jpg" alt=""></div>
+                        <h3>Ильичев Иван</h3>
+                        <p>Инструктор тренажерного зала и групповых программ</p>
+                    </article>
                 </main>
-            </section> -->
+            </section>
         </section>
-        <!-- <section class="application" id="application">
-            <h1 class="application__heading">Записаться на тренеровку или купить абонемент</h1>
+        <section class="application" id="application">
+            <h1 class="application__heading heading">Записаться на тренеровку или купить абонемент</h1>
             <form action="" class="application__form aplication-form">
                 <input type="text" name="name" placeholder="Представьтесь">
                 <input type="tel" name="numberPhone" placeholder="Номер телефона">
@@ -169,25 +191,36 @@
                 </select>
                 <button type="submit">Отправить заявку</button>
             </form>
-        </section> -->
-        <!-- <section class="contacts" id="contacts">
+        </section>
+        <section class="contacts" id="contacts">
             <h1 class="contacts__heading heading">Контакты</h1>
-            <main class="contacts__main">
-                <div class="contacts-main">
-                    <article class="contacts-main__map"></article>
-                    <article class="contacts-main__information"></article>
-                </div>
+            <main class="contacts__main contacts-main">
+                <article class="contacts-main__map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2219.3758973758017!2d43.35537967725716!3d56.202463257267034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414e398925c2d785%3A0xfda5e63a9154cf39!2z0YPQuy4g0KHQvtCy0LXRgtGB0LrQsNGPLCAxLCDQltC10LvQvdC40L3Qviwg0J3QuNC20LXQs9C-0YDQvtC00YHQutCw0Y8g0L7QsdC7LiwgNjA2MDQ0!5e0!3m2!1sru!2sru!4v1683807606791!5m2!1sru!2sru"
+                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></article>
+                <article class="contacts-main__information">
+                    <h2>Режим работы фитнес-центра</h2>
+                    <p>Ежедневно: 07:00 - 23:00</p>
+                    <a href="">+ 7 (8313) 39 26 26</a>
+                    <a href="">+ 7 903 604 20 06</a>
+                    <a href="">+ 7 905 667 09 28</a>
+                    <a href="" class="mail">fitnes@Sila.ru</a>
+                    <p class="address">606044, Нижегородская обл. г. Дзержинск, п. Желнино, ул. Советская, д.1а</p>
+                </article>
             </main>
-            <p class="__address"></p>
-        </section> -->
+
+        </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="footer__mail"><a href="mail:fitnes@Sila.ru" class="footer footer--mail-link">fitnes@Sila.ru</a>
         </div>
         <div class="footer__copyright">Все права защищены &copy;</div>
-        <div class="footer__social"><a href="" class="footer__social-link"></a><a href=""
-                class="footer__social-link"></a></div>
-    </footer> -->
+        <div class="footer__social">
+            <a href="" class="footer__social-link"><img src="./assets/images/icons/vk.png" alt=""></a>
+            <a href="" class="footer__social-link"><img src="./assets/images/icons/telegram.png" alt=""></a>
+        </div>
+    </footer>
 </body>
 
 </html>
